--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}.com</a>
+    <a class="site-title" href="{{ site.baseurl }}/">welcome to the prose'verse</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
