--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       </ul>
     </div>
 
-    <div class="footer-col-2 column">
+<!--     <div class="footer-col-2 column">
       <ul>
         <li>
           <a href="https://github.com/{{ site.github_username }}">
@@ -49,7 +49,7 @@
           </a>
         </li>
       </ul>
-    </div>
+    </div> -->
 
     <div class="footer-col-3 column">
       <p class="text">{{ site.description }}</p>
