--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,15 +6,9 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-      </ul>
-    </div>
-
-<!--     <div class="footer-col-2 column">
-      <ul>
         <li>
           <a href="https://github.com/{{ site.github_username }}">
-            <span class="icon github">
+            <span class="icon github">github
               <svg version="1.1" class="github-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
                 <path fill-rule="evenodd" clip-rule="evenodd" fill="#C2C2C2" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761
@@ -33,7 +27,7 @@
         </li>
         <li>
           <a href="https://twitter.com/{{ site.twitter_username }}">
-            <span class="icon twitter">
+            <span class="icon twitter">twitter
               <svg version="1.1" class="twitter-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
                 <path fill="#C2C2C2" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
@@ -49,9 +43,12 @@
           </a>
         </li>
       </ul>
-    </div> -->
+    </div>
 
     <div class="footer-col-3 column">
+      <ul>
+        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+      </ul>
       <p class="text">{{ site.description }}</p>
     </div>
 
