--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-
+<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <div class="wrap">
 
     <a class="site-title" href="{{ site.baseurl }}/">welcome to the prose'verse</a>
