linkedin link, resume PDF DL, selfie

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,9 @@
             <span class="username">{{ site.username }}</span>
           </a>
         </li>
+        <li>
+          <a href="https://www.linkedin.com/in/tamtdang">linked in</a>
+        </li>
       </ul>
     </div>
 
