--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
 a         { color: #A219A8; text-decoration: none; }
 a:hover   { color: #1F7ED1; }
 
+img {
+  border-radius: 2px;
+}
+
 /* Utility */
 
 .wrap:before,
