--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
 
-    <h2 class="footer-heading">Tam T. Dang</h2>
+    <h2 class="footer-heading"></h2>
 
     <div class="footer-col-1 column">
       <ul>
