style updates idk

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="wrap">
 
-    <a class="site-title" href="{{ site.baseurl }}/">tam t. dang</a>
+    <a class="site-title" href="{{ site.baseurl }}/">Tam T. Dang</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
