--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrap">
-
-    <h2 class="footer-heading"></h2>
-
+    <h2 class="footer-heading">Contact</h2>
     <div class="footer-col-1 column">
       <ul>
         <li>
@@ -42,19 +40,19 @@
             <span class="username">{{ site.username }}</span>
           </a>
         </li>
-        <li>
-          <a href="https://www.linkedin.com/in/tamtdang">linked in</a>
-        </li>
       </ul>
     </div>
 
     <div class="footer-col-3 column">
       <ul>
-        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <li>
+          <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/tamtdang">linked in</a>
+        </li>
       </ul>
       <p class="text">{{ site.description }}</p>
     </div>
-
   </div>
-
 </footer>
